{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 7,
  "lineage": "4afd0b76-0e94-8f42-582a-9face6a46319",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "app_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.78.244.37",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-05-19T07:47:45.594-07:00",
            "id": "river-direction-258914/europe-west1/reddit-app-ip",
            "name": "reddit-app-ip",
            "network_tier": "PREMIUM",
            "project": "river-direction-258914",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/river-direction-258914/regions/europe-west1/addresses/reddit-app-ip"
          }
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_mongo",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-05-19T07:47:45.459-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-mongo-default",
            "name": "allow-mongo-default",
            "network": "https://www.googleapis.com/compute/v1/projects/river-direction-258914/global/networks/default",
            "priority": 1000,
            "project": "river-direction-258914",
            "self_link": "https://www.googleapis.com/compute/v1/projects/river-direction-258914/global/firewalls/allow-mongo-default",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "reddit-app"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "reddit-db"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_puma",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9292"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-05-19T07:47:45.507-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-puma-default",
            "name": "allow-puma-default",
            "network": "https://www.googleapis.com/compute/v1/projects/river-direction-258914/global/networks/default",
            "priority": 1000,
            "project": "river-direction-258914",
            "self_link": "https://www.googleapis.com/compute/v1/projects/river-direction-258914/global/firewalls/allow-puma-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "reddit-app"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-05-19T07:47:45.617-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "default-allow-ssh",
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/river-direction-258914/global/networks/default",
            "priority": 1000,
            "project": "river-direction-258914",
            "self_link": "https://www.googleapis.com/compute/v1/projects/river-direction-258914/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "109.74.133.6/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/river-direction-258914/global/images/app-1589892450",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/river-direction-258914/zones/europe-west1-b/disks/reddit-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "reddit-app",
            "instance_id": "6482850898894540665",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "ctm:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDLgAyBhTL2cAht4kDSINggRd/s/YQSrIKjNZzzE22QIP31NMw85cNMceh0aMlcQJvq03Jhcy9jpgET8l9e+QIbRy/EuVAxReUVa8pObHTEY9EpDtbBNFBRrLNOdbTQuW0DdesjLcdUrvCMKfo4eoMpDYZjmTGoj7vuv7ujGL7XTJCFzFf7goBHj4xaqUxgKVM8uTwvrMvSBQp4BstnRdHoLotAtm7GhQk1kuBmgPp226+aax9zpUyRkSjW1dHgkPH/UYChVmqCblb6lGIEAANCLaA1z3TBPiPum7ChHKAl46bJarebrBUHPxm5gngR84Vm/ZevST6PN0SzXrzZlbU5 ctm@devops_db\n"
            },
            "metadata_fingerprint": "gYVkw3mQxFk=",
            "name": "reddit-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.78.244.37",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/river-direction-258914/global/networks/default",
                "network_ip": "10.132.0.39",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/river-direction-258914/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "river-direction-258914"
              }
            ],
            "project": "river-direction-258914",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/river-direction-258914/zones/europe-west1-b/instances/reddit-app",
            "tags": [
              "reddit-app"
            ],
            "tags_fingerprint": "M-ggixIz-AU=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "module.app.google_compute_address.app_ip"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/river-direction-258914/global/images/db-1589892220",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/river-direction-258914/zones/europe-west1-b/disks/reddit-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "reddit-db",
            "instance_id": "8779226528877531005",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "ctm:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDLgAyBhTL2cAht4kDSINggRd/s/YQSrIKjNZzzE22QIP31NMw85cNMceh0aMlcQJvq03Jhcy9jpgET8l9e+QIbRy/EuVAxReUVa8pObHTEY9EpDtbBNFBRrLNOdbTQuW0DdesjLcdUrvCMKfo4eoMpDYZjmTGoj7vuv7ujGL7XTJCFzFf7goBHj4xaqUxgKVM8uTwvrMvSBQp4BstnRdHoLotAtm7GhQk1kuBmgPp226+aax9zpUyRkSjW1dHgkPH/UYChVmqCblb6lGIEAANCLaA1z3TBPiPum7ChHKAl46bJarebrBUHPxm5gngR84Vm/ZevST6PN0SzXrzZlbU5 ctm@devops_db\n"
            },
            "metadata_fingerprint": "gYVkw3mQxFk=",
            "name": "reddit-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.205.112.130",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/river-direction-258914/global/networks/default",
                "network_ip": "10.132.0.38",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/river-direction-258914/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "river-direction-258914"
              }
            ],
            "project": "river-direction-258914",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/river-direction-258914/zones/europe-west1-b/instances/reddit-db",
            "tags": [
              "reddit-db"
            ],
            "tags_fingerprint": "NQyRUqL7UTU=",
            "zone": "europe-west1-b"
          }
        }
      ]
    }
  ]
}